--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.)
 
 /* The large EasyTree logo */
 header {
-    font-family: 'hennypenny';
+    font-family: HennyPenny;
     text-align: center;
     color: #fff;
     font-size: 30px;
@@ -28,13 +28,13 @@ header {
 /* all other logo instances */
 #logo {
     color: #fff;
-    font-family:'hennypenny';
+    font-family: HennyPenny;
     text-decoration: none;
 }
 
 /* other headings */
 h3 {
-    font-family: 'copse';
+    font-family: Copse;
     text-align: center;
     color: #fff;
     margin-top: 0;
@@ -74,7 +74,7 @@ body.gen {
 .mainbox nav a {
     text-decoration: none;
     color: #fff;
-    font-family: 'bebas';
+    font-family: Bebas;
     font-size: 30px;
 }
 
@@ -86,7 +86,7 @@ body.gen {
 
 /* content box heading */
 .mainbox h2 {
-    font-family: 'copse';
+    font-family: Copse;
     text-align: left;
     color: #fff;
     margin-left: 20px;
@@ -95,7 +95,7 @@ body.gen {
 
 /* content box text */
 .mainbox p {
-    font-family: 'copse';
+    font-family: Copse;
     text-align: left;
     color: #fff;
     margin-left: 20px;
@@ -104,7 +104,7 @@ body.gen {
 
 /* content box lists */
 li {
-    font-family: 'copse';
+    font-family: Copse;
     text-align: left;
     color: #fff;
     margin-left: 20px;
@@ -112,7 +112,7 @@ li {
 }
 
 li #faq {
-    font-family: 'copse';
+    font-family: Copse;
     text-align: left;
     color: #000;
     margin-left: 20px;
@@ -121,7 +121,7 @@ li #faq {
 
 /* navigation menu logo */
 .navbar h2 {
-    font-family: 'hennypenny';
+    font-family: HennyPenny;
     color: #fff;
     position: fixed;
     margin-top: 10px;
@@ -145,7 +145,7 @@ li #faq {
 /* navigation menu links */
 .navlinks a {
     text-decoration: none;
-    font-family: 'bebas';
+    font-family: Bebas;
     font-size: 15px;
     color: #fff;
     padding: 10px 20px 10px 20px;
@@ -187,19 +187,19 @@ footer a {
 
 /* Henny Penny font */
 @font-face {
-    font-family: 'hennypenny';
+    font-family: HennyPenny;
     src: url('fonts/HennyPenny-Regular.otf');
 }
 
 /* BEBAS font */
 @font-face {
-    font-family: 'bebas';
+    font-family: Bebas;
     src: url('fonts/BEBAS___.ttf');
 }
 
 /* Copse font */
 @font-face {
-    font-family: 'copse';
+    font-family: Copse;
     src: url('fonts/Copse-Regular.ttf');
 }
 
@@ -237,7 +237,7 @@ body.viewtree {
     border: none;
     border-radius: 10px;
     text-decoration: none;
-    font-family: 'bebas';
+    font-family: Bebas;
     font-size: 15px;
     color: #000;
     padding: 5px;
@@ -407,19 +407,19 @@ table input {
 }
 
 .standard {
-    font-family: 'copse';
+    font-family: Copse;
 }
 
 .serif {
-    font-family: 'serif';
+    font-family: Serif;
 }
 
 .sans-serif {
-    font-family: 'sans-serif';
+    font-family: Sans-Serif;
 }
 
 .monospace {
-    font-family: 'monospace';
+    font-family: Monospace;
 }
 
 /* temporary links while dragging nodes */
