--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ footer {
     color: #fff;
     text-align: center;
     font-size: 10px;
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: Trebuchet MS, Sans-Serif;
     padding: 5px;
     position: absolute;
     top: 95%;
